# sphinxcontrib-uwu

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
sphinxcontrib_uwu/: __init__.py
