[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "sphinxcontrib-uwu"
version = "0.0.1"
description = "For sphinx projects that have a severe lack of uwu."
authors = ["shiftinv <me@shiftinv.cc>"]
license = "MIT"
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
readme = "README.md"
repository = "https://github.com/shiftinv/sphinxcontrib-uwu"

[tool.poetry.dependencies]
python = "^3.8"
sphinx = ">=5.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "~2.20.0"
pyright = "1.1.265"
docutils-stubs = "^0.0.22"
sphinx-autobuild = "^2021.3.14"


[tool.pyright]
typeCheckingMode = "strict"


[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]


[tool.isort]
profile = "black"
py_version = 38
line_length = 100
combine_as_imports = true
